--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
-<%= @search_presenter.stations.count %> Results
+<%= @stations.count %> Results
 
-<% @search_presenter.stations.each do |station| %>
+<% @stations.each do |station| %>
   <ul class="station">
     <li class="name"><%= station.name %></li>
     <li class="address"><%= station.address %></li>
